package de.bublitz.balancer.server.model.enums;

public enum LoadStrategy {
    NONE,
    FCFS,
    FIFO,
    PQ
}
